--- a/ss05-Auth/firestoreExample/CSS/main.css
+++ b/ss05-Auth/firestoreExample/CSS/main.css
@@ -13,9 +13,14 @@
   padding: 10px 20px;
   border-radius: 10px;
   font-weight: 600;
+  color: #222;
+  background-color: rgba(153, 153, 153, 0.2);
+  border: 1px solid transparent;
 }
 .create-product:hover{
   color: orange;
+  background-color: rgba(255, 165, 0, 0.2);
+  border: 1px solid currentColor;
 }
 .cart-link {
   margin-left: 20px;
@@ -59,8 +64,9 @@
   justify-content: space-between;
   margin-left: 20px;
   margin-top: 20px;
+  position: relative;
 }
-@media screen and (max-width: 679px) {
+@media screen and (max-width: 767px) {
   .product {
     width: calc(33.33% - 20px);
   }
@@ -104,5 +110,22 @@
 .product-cart:hover {
   color: rgb(255, 153, 0);
   font-weight: 500;
+  border: 1px solid currentColor;
+}
+.product-delete{
+  font-size: 20px;
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #e4e4e4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product-delete:hover{
+  color: red;
+  background-color: rgba(255, 0, 0, 0.4);
   border: 1px solid currentColor;
 }
