--- a/ss05-Auth/firestoreExample/CSS/main.css
+++ b/ss05-Auth/firestoreExample/CSS/main.css
@@ -4,6 +4,14 @@
 .header {
   display: flex;
   align-items: center;
+  padding: 0 10px;
+  overflow-x: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  background-color: #e4e4e4;
 }
 .header > span {
   margin-right: auto;
@@ -55,9 +63,11 @@
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 .product {
-  width: calc(20% - 20px);
+  width: calc(25% - 20px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -67,23 +77,18 @@
   border-radius: 20px;
   overflow: hidden;
   padding: 10px;
+  background-color: #e4e4e483;
 }
-@media screen and (max-width: 767px) {
-  .product {
-    width: calc(33.33% - 20px);
-  }
-}
-@media screen and (max-width: 1023px) {
-  .product {
-    width: calc(25% - 20px);
-  }
-}
+
 
 .product-image {
   width: 100%;
   height: 180px;
   border-radius: 10px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .product-image > img{
   object-fit: cover;
@@ -111,6 +116,7 @@
 }
 .product-cart {
   border-radius: 10px;
+  background-color: #fff;
 }
 .product-cart:hover {
   color: rgb(255, 153, 0);
@@ -121,6 +127,8 @@
   font-size: 20px;
   position: absolute;
   right: 0;
+  top: 0;
+  transform: translate(-50%,50%);
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -133,4 +141,25 @@
   color: red;
   background-color: rgba(255, 0, 0, 0.4);
   border: 1px solid currentColor;
+}
+@media screen and (max-width: 1023px) {
+  .products{
+    padding-right: 0;
+  }
+  .product {
+    width: calc(50% - 20px);
+  }
+}
+@media screen and (max-width: 767px) {
+  .products{
+    padding: 0 10px;
+  }
+  .product {
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+  .product-image{
+    height: auto;
+  }
 }
