--- a/ss05-Auth/firestoreExample/CSS/reset.css
+++ b/ss05-Auth/firestoreExample/CSS/reset.css
@@ -16,11 +16,13 @@ body {
   font-weight: 300;
   max-width: 1000px;
   margin: 0 auto; 
+  padding-top: 80px;
 }
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 a {
