--- a/ss05-Auth/firestoreExample/CSS/main.css
+++ b/ss05-Auth/firestoreExample/CSS/main.css
@@ -83,7 +83,7 @@
 
 .product-image {
   width: 100%;
-  height: 180px;
+  height: 80%;
   border-radius: 10px;
   overflow: hidden;
   display: flex;
@@ -113,6 +113,9 @@
 }
 .product-rating {
   color: orange;
+}
+.product-price{
+  margin-bottom: 10px;
 }
 .product-cart {
   border-radius: 10px;
