--- a/ss05-Auth/firestoreExample/CSS/reset.css
+++ b/ss05-Auth/firestoreExample/CSS/reset.css
@@ -14,7 +14,7 @@ body {
   font-size: 14px;
   overflow-x: hidden;
   font-weight: 300;
-  max-width: 1000px;
+  max-width: 1270px;
   margin: 0 auto; 
   padding-top: 80px;
 }
@@ -27,6 +27,7 @@ img {
 
 a {
   text-decoration: none;
+  color: #333;
 }
 
 input,
