--- a/ss05-Auth/firestoreExample/CSS/main.css
+++ b/ss05-Auth/firestoreExample/CSS/main.css
@@ -19,7 +19,7 @@
 .create-product {
   padding: 10px 20px;
   border-radius: 10px;
-  font-weight: 600;
+  font-weight: bold;
   color: #222;
   background-color: rgb(172, 172, 172);
   border: 1px solid transparent;
